# markdown-translator-finetuning

./: .gitignore  PLAN.md  README-kr.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: markdown_preservation.yml
configs/: hub_config.yaml  inference_config.yaml  local_llm_config.yaml  lora_config.yaml  qlora_config.yaml  training_config.yaml
data/processed/: test.jsonl  train.jsonl  valid.jsonl
data/synthetic/: sample_pairs.jsonl  template_pairs.jsonl  template_pairs_1000.jsonl
scripts/: evaluate.py  generate_synthetic.py  inference.py  prepare_data.py  train.py  upload_to_hub.py  validate_markdown_preservation.py
src/: __init__.py
src/data/: __init__.py  async_generator.py  batch_generator.py  collector.py  dataset.py  local_llm_provider.py  markdown_parser.py  preprocessor.py  synthetic_generator.py
src/evaluation/: __init__.py  metrics.py
src/inference/: __init__.py  pipeline.py
src/model/: __init__.py  hub_uploader.py  loader.py
src/training/: __init__.py  callbacks.py  collator.py  trainer.py
src/utils/: __init__.py  dependencies.py
